# PBLF-C

./: .gitignore  CMakeLists.txt  readme.md  start.bat
data/: patterns.txt  userlist.txt
include/: chatbot.h  common.h  contact.h  game.h  http.h  llm.h  memo.h  todo.h  user.h
src/: chatbot.c  contact.c  game.c  http.c  llm.c  main.c  memo.c  todo.c  user.c
